--- a/config/prod.env
+++ b/config/prod.env
@@ -5,5 +5,5 @@ const version = JSON.parse(packageJson).version || 0
 module.exports = {
   NODE_ENV: 'production',
   VERSION: `'${version}'`,
-  MIRAGE_API:'https://crud-vue-quasar-samuelmvf.vercel.app/api'
+  MIRAGE_API:'https://ga4-seven.vercel.app/api'
 }
